@@ -92,7 +92,8 @@ static ldap_config_t *__config = NULL;
 /*
  * Global LDAP session.
  */
-static ldap_session_t __session = { NULL, NULL };
+static ldap_session_t __session =
+{NULL, NULL};
 
 #if defined(HAVE_PTHREAD_ATFORK) || defined(HAVE_LIBC_LOCK_H) || defined(HAVE_BITS_LIBC_LOCK_H)
 static pthread_once_t __once = PTHREAD_ONCE_INIT;
@@ -177,8 +178,8 @@ static NSS_STATUS do_result (ent_context_t * ctx, int all);
  * Format a filter given a prototype.
  */
 static NSS_STATUS do_filter (const ldap_args_t * args, const char *filterprot,
-			     const char **attrs, char *filter,
-			     size_t filterlen);
+			ldap_service_search_descriptor_t * sd, char *filter,
+			     size_t filterlen, const char **retFilter);
 
 /*
  * Parse a result, fetching new results until a successful parse
@@ -199,9 +200,9 @@ typedef NSS_STATUS (*search_func_t) (const char *, int, const char *,
  * Do a search with a reconnect harness.
  */
 static NSS_STATUS
-do_with_reconnect (const char *base, int scope,
-		   const char *filter, const char **attrs, int sizelimit,
-		   void *private, search_func_t func);
+  do_with_reconnect (const char *base, int scope,
+		     const char *filter, const char **attrs, int sizelimit,
+		     void *private, search_func_t func);
 
 /*
  * Do a bind with a defined timeout
@@ -280,7 +281,8 @@ _nss_ldap_rebind (LDAP * ld, char **whop, char **credp, int *methodp,
  * table for the switch. Thus, it's safe to grab the mutex from this
  * function.
  */
-NSS_STATUS _nss_ldap_default_destr (nss_backend_t * be, void *args)
+NSS_STATUS 
+_nss_ldap_default_destr (nss_backend_t * be, void *args)
 {
   debug ("==> _nss_ldap_default_destr");
 
@@ -302,7 +304,8 @@ NSS_STATUS _nss_ldap_default_destr (nss_backend_t * be, void *args)
  * This is the default "constructor" which gets called from each 
  * constructor, in the NSS dispatch table.
  */
-NSS_STATUS _nss_ldap_default_constr (nss_ldap_backend_t * be)
+NSS_STATUS 
+_nss_ldap_default_constr (nss_ldap_backend_t * be)
 {
   debug ("==> _nss_ldap_default_constr");
 
@@ -537,7 +540,7 @@ do_open (void)
 	  (__pthread_atfork == NULL ? pid : -1), __euid, euid);
 #else
   syslog (LOG_DEBUG,
-	  "nss_ldap: __session.ls_conn=%p, __pid=%i, pid=%i, __euid=%i, euid=%i",
+     "nss_ldap: __session.ls_conn=%p, __pid=%i, pid=%i, __euid=%i, euid=%i",
 	  __session.ls_conn, __pid, pid, __euid, euid);
 #endif
 #endif /* DEBUG */
@@ -667,7 +670,7 @@ do_open (void)
 
       if (status != NSS_SUCCESS)
 	{
-	  __config = NULL; /* reset otherwise heap is corrupted */
+	  __config = NULL;	/* reset otherwise heap is corrupted */
 	  status =
 	    _nss_ldap_readconfigfromdns (&__config, __configbuf,
 					 sizeof (__configbuf));
@@ -692,7 +695,7 @@ do_open (void)
       if (cfg->ldc_ssl_on == SSL_LDAPS)
 	{
 	  if (__ssl_initialized == 0
-	      && ldapssl_client_init (cfg->ldc_sslpath, NULL) != LDAP_SUCCESS)
+	    && ldapssl_client_init (cfg->ldc_sslpath, NULL) != LDAP_SUCCESS)
 	    {
 	      continue;
 	    }
@@ -1046,54 +1049,104 @@ _nss_ldap_ent_context_free (ent_context_t ** ctx)
 /*
  * Do the necessary formatting to create a string filter.
  */
-static NSS_STATUS
+static NSS_STATUS 
 do_filter (const ldap_args_t * args, const char *filterprot,
-	   const char **attrs, char *filter, size_t filterlen)
+	   ldap_service_search_descriptor_t * sd, char *userbuf,
+	   size_t userbufSiz, const char **retFilter)
+
 {
   char buf1[LDAP_FILT_MAXSIZ], buf2[LDAP_FILT_MAXSIZ];
+  char *filterBufP, filterBuf[LDAP_FILT_MAXSIZ];
+  size_t filterSiz;
   NSS_STATUS stat;
 
   debug ("==> do_filter");
 
   if (args != NULL)
     {
+      /* choose what to use for temporary storage */
+
+      if (sd != NULL && sd->lsd_filter != NULL)
+	{
+	  filterBufP = filterBuf;
+	  filterSiz = sizeof (filterBuf);
+	}
+      else
+	{
+	  filterBufP = userbuf;
+	  filterSiz = userbufSiz;
+	}
+
       switch (args->la_type)
 	{
 	case LA_TYPE_STRING:
 	  if (
-	      (stat =
-	       _nss_ldap_escape_string (args->la_arg1.la_string, buf1,
-					sizeof (buf1))) != NSS_SUCCESS)
+	       (stat =
+		_nss_ldap_escape_string (args->la_arg1.la_string, buf1,
+					 sizeof (buf1))) != NSS_SUCCESS)
 	    return stat;
-	  snprintf (filter, filterlen, filterprot, buf1);
+	  snprintf (filterBufP, filterSiz, filterprot, buf1);
 	  break;
 	case LA_TYPE_NUMBER:
-	  snprintf (filter, filterlen, filterprot, args->la_arg1.la_number);
+	  snprintf (filterBufP, filterSiz, filterprot, args->la_arg1.la_number);
 	  break;
 	case LA_TYPE_STRING_AND_STRING:
 	  if (
-	      (stat =
-	       _nss_ldap_escape_string (args->la_arg1.la_string, buf1,
-					sizeof (buf1))) != NSS_SUCCESS
-	      || (stat =
-		  _nss_ldap_escape_string (args->la_arg2.la_string, buf2,
-					   sizeof (buf2)) != NSS_SUCCESS))
+	       (stat =
+		_nss_ldap_escape_string (args->la_arg1.la_string, buf1,
+					 sizeof (buf1))) != NSS_SUCCESS
+	       || (stat =
+		   _nss_ldap_escape_string (args->la_arg2.la_string, buf2,
+					    sizeof (buf2)) != NSS_SUCCESS))
 	    return stat;
-	  snprintf (filter, filterlen, filterprot, buf1, buf2);
+	  snprintf (filterBufP, filterSiz, filterprot, buf1, buf2);
 	  break;
 	case LA_TYPE_NUMBER_AND_STRING:
 	  if (
-	      (stat =
-	       _nss_ldap_escape_string (args->la_arg2.la_string, buf1,
-					sizeof (buf1))) != NSS_SUCCESS)
+	       (stat =
+		_nss_ldap_escape_string (args->la_arg2.la_string, buf1,
+					 sizeof (buf1))) != NSS_SUCCESS)
 	    return stat;
-	  snprintf (filter, filterlen, filterprot,
+	  snprintf (filterBufP, filterSiz, filterprot,
 		    args->la_arg1.la_number, buf1);
 	  break;
 	}
+
+      /*
+       * This code really needs to be cleaned up.
+       */
+      if (sd != NULL && sd->lsd_filter != NULL)
+	{
+	  size_t filterBufPLen = strlen (filterBufP);
+
+	  /* remove trailing bracket */
+	  /* ( */
+	  if (filterBufP[filterBufPLen - 1] == ')')
+	    filterBufP[filterBufPLen - 1] = '\0';
+
+	  /* ( */
+	  snprintf (userbuf, userbufSiz, "%s(%s))",
+		    filterBufP, sd->lsd_filter);
+	}
+
+      *retFilter = userbuf;
+    }
+  else
+    {
+      /* no arguments, probably an enumeration filter */
+      if (sd != NULL && sd->lsd_filter != NULL)
+	{
+	  snprintf (userbuf, userbufSiz, "(&%s(%s))",
+		    filterprot, sd->lsd_filter);
+	  *retFilter = userbuf;
+	}
+      else
+	{
+	  *retFilter = filterprot;
+	}
     }
 
-  debug (":== do_filter: %s\n", (args == NULL ? filterprot : filter));
+  debug (":== do_filter: %s", *retFilter);
 
   debug ("<== do_filter");
 
@@ -1122,7 +1175,7 @@ do_result (ent_context_t * ctx, int all)
 	case 0:
 #ifdef LDAP_OPT_ERROR_NUMBER
 	  if (ldap_get_option
-	      (__session.ls_conn, LDAP_OPT_ERROR_NUMBER, &rc) != LDAP_SUCCESS)
+	    (__session.ls_conn, LDAP_OPT_ERROR_NUMBER, &rc) != LDAP_SUCCESS)
 	    {
 	      rc = LDAP_UNAVAILABLE;
 	    }
@@ -1210,7 +1263,7 @@ do_with_reconnect (const char *base, int scope,
 	    backoff *= 2;
 
 	  syslog (LOG_INFO,
-		  "nss_ldap: reconnecting to LDAP server (sleeping %d seconds)...",
+	   "nss_ldap: reconnecting to LDAP server (sleeping %d seconds)...",
 		  backoff);
 	  (void) sleep (backoff);
 	}
@@ -1236,7 +1289,7 @@ do_with_reconnect (const char *base, int scope,
 	{
 #ifdef LDAP_OPT_ERROR_NUMBER
 	  if (ldap_get_option
-	      (__session.ls_conn, LDAP_OPT_ERROR_NUMBER, &rc) != LDAP_SUCCESS)
+	    (__session.ls_conn, LDAP_OPT_ERROR_NUMBER, &rc) != LDAP_SUCCESS)
 	    {
 	      rc = LDAP_UNAVAILABLE;
 	    }
@@ -1511,7 +1564,8 @@ _nss_ldap_next_entry (LDAPMessage * res)
 /*
  * Calls ldap_result() with LDAP_MSG_ONE.
  */
-NSS_STATUS _nss_ldap_result (ent_context_t * ctx)
+NSS_STATUS 
+_nss_ldap_result (ent_context_t * ctx)
 {
   return do_result (ctx, LDAP_MSG_ONE);
 }
@@ -1526,11 +1580,12 @@ _nss_ldap_search_s (const ldap_args_t * args,
 		    ldap_map_selector_t sel,
 		    int sizelimit, LDAPMessage ** res)
 {
-  char filter[LDAP_FILT_MAXSIZ], sdFilter[LDAP_FILT_MAXSIZ];
   char sdBase[LDAP_FILT_MAXSIZ], *base = NULL;
-  const char **attrs;
+  char filterBuf[LDAP_FILT_MAXSIZ];
+  const char **attrs, *filter;
   int scope;
   NSS_STATUS stat;
+  ldap_service_search_descriptor_t *sd = NULL;
 
   debug ("==> _nss_ldap_search_s");
 
@@ -1549,8 +1604,7 @@ _nss_ldap_search_s (const ldap_args_t * args,
 
   if (sel < LM_NONE)
     {
-      ldap_service_search_descriptor_t *sd =
-	__session.ls_config->ldc_sds[sel];
+      sd = __session.ls_config->ldc_sds[sel];
       if (sd != NULL)
 	{
 	  size_t len = strlen (sd->lsd_base);
@@ -1570,23 +1624,15 @@ _nss_ldap_search_s (const ldap_args_t * args,
 	    {
 	      scope = sd->lsd_scope;
 	    }
-
-	  if (sd->lsd_filter != NULL)
-	    {
-	      snprintf (sdFilter, sizeof (sdFilter), "(&(%s)(%s))",
-			sd->lsd_filter, filterprot);
-	      filterprot = sdFilter;
-	    }
 	}
       attrs = _nss_ldap_attrtab[sel];
     }
 
-  stat = do_filter (args, filterprot, attrs, filter, sizeof (filter));
+  stat = do_filter (args, filterprot, sd, filterBuf, sizeof (filterBuf), &filter);
   if (stat != NSS_SUCCESS)
     return stat;
 
-  stat = do_with_reconnect (base, scope,
-			    (args == NULL) ? (char *) filterprot : filter,
+  stat = do_with_reconnect (base, scope, filter,
 			    attrs, sizelimit, res,
 			    (search_func_t) do_search_s);
 
@@ -1604,11 +1650,12 @@ _nss_ldap_search (const ldap_args_t * args,
 		  const char *filterprot,
 		  ldap_map_selector_t sel, int sizelimit, int *msgid)
 {
-  char filter[LDAP_FILT_MAXSIZ], sdFilter[LDAP_FILT_MAXSIZ];
   char sdBase[LDAP_FILT_MAXSIZ], *base = NULL;
-  const char **attrs;
+  char filterBuf[LDAP_FILT_MAXSIZ];
+  const char **attrs, *filter;
   int scope;
   NSS_STATUS stat;
+  ldap_service_search_descriptor_t *sd = NULL;
 
   debug ("==> _nss_ldap_search");
 
@@ -1627,8 +1674,7 @@ _nss_ldap_search (const ldap_args_t * args,
 
   if (sel < LM_NONE)
     {
-      ldap_service_search_descriptor_t *sd =
-	__session.ls_config->ldc_sds[sel];
+      sd = __session.ls_config->ldc_sds[sel];
 
       if (sd != NULL)
 	{
@@ -1649,23 +1695,15 @@ _nss_ldap_search (const ldap_args_t * args,
 	    {
 	      scope = sd->lsd_scope;
 	    }
-
-	  if (sd->lsd_filter != NULL)
-	    {
-	      snprintf (sdFilter, sizeof (sdFilter), "(&(%s)(%s))",
-			sd->lsd_filter, filterprot);
-	      filterprot = sdFilter;
-	    }
 	}
       attrs = _nss_ldap_attrtab[sel];
     }
 
-  stat = do_filter (args, filterprot, attrs, filter, sizeof (filter));
+  stat = do_filter (args, filterprot, sd, filterBuf, sizeof (filterBuf), &filter);
   if (stat != NSS_SUCCESS)
     return stat;
 
-  stat = do_with_reconnect (base, scope,
-			    (args == NULL) ? (char *) filterprot : filter,
+  stat = do_with_reconnect (base, scope, filter,
 			    attrs, sizelimit, msgid,
 			    (search_func_t) do_search);
 
@@ -1995,7 +2033,8 @@ _nss_ldap_assign_passwd (LDAP * ld,
   return NSS_SUCCESS;
 }
 
-NSS_STATUS _nss_ldap_oc_check (LDAP * ld, LDAPMessage * e, const char *oc)
+NSS_STATUS 
+_nss_ldap_oc_check (LDAP * ld, LDAPMessage * e, const char *oc)
 {
   char **vals, **valiter;
   NSS_STATUS ret = NSS_NOTFOUND;
